commit de index principal y html, js, css de practica 2

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -167,10 +167,30 @@
                 <p>Enlaces pedidos:</p>
                 <ul>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-10-06&until=2025-10-07">Link de commits</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 1 ev2/index.html">Link Página</a></li>
                 </ul>
 
                 <h4>Fecha commits</h4>
                 <p>06 al 07 de octubre del 2025</p>
+            </article>
+        </section>
+
+        <section>
+            <article>
+                <header>
+                    <h3>Practica 2</h3>
+                    <hr>
+                </header>
+
+                <p>Practica 2 de EV2 - Se creó un sudoku con JavaScript.</p>
+                <p>Enlaces pedidos:</p>
+                <ul>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-10-13&until=2025-10-14">Link de commits</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/Practica 2 ev2/index.html">Link Página</a></li>
+                </ul>
+
+                <h4>Fecha commits</h4>
+                <p>13 al 14 de octubre del 2025</p>
             </article>
         </section>
 
