--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -84,8 +84,24 @@
             <h2>Practica 1 evidencia 2</h2>
             <p>calculadora</p>
             <ul>
-                <li><a href="https://fdw52ad2025.github.io/website52/EddMont/Evidencia2/index.html" target="_blank">Link Pagina</a></li>
+                <li><a href="https://fdw52ad2025.github.io/webs/Evidencia2/index.html" target="_blank">Link Pagina</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
+            </ul>
+        </article>
+
+        <article>
+            <h2>Practica 2 Evidencia2</h2>
+            <p>
+                En esta practica se hara una pagina con un boton que al ejecutarlo haga
+                una tabla igual a la siguiente 
+                1 2 3
+                4 5 6
+                7 8 9
+                Esto utilizando un bucle y un createElement
+            </p>
+            <ul>
+                <li><a href="" target="_blank">Link Pagina</a></li>
+                <li></li>
             </ul>
         </article>
     </main>
