--- a/EddMont/index.html
+++ b/EddMont/index.html
@@ -100,8 +100,8 @@
                 Esto utilizando un bucle y un createElement
             </p>
             <ul>
-                <li><a href="" target="_blank">Link Pagina</a></li>
-                <li></li>
+                <li><a href="https://fdw52ad2025.github.io/webs/Ciclos/index.html" target="_blank">Link Pagina</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=emiliano804" target="_blank">Commits</a></li>
             </ul>
         </article>
     </main>
