Agrego practica 2 ev 2

--- a/RickyCorCam/index.html
+++ b/RickyCorCam/index.html
@@ -120,6 +120,7 @@
                     </ul>
                 </article>
             </section>
+            <hr>
         <div id="ev2">
             <h1>PRACTICAS EV2</h1>
             <section>
@@ -135,6 +136,20 @@
                     <ul>
                         <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/ev2/practica1/index.html">Link aplicacion areas</a></li>
                         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-10-06&until=2025-10-07">Link commits</a></li>
+                    </ul>
+                </article>
+            </section>
+            <section>
+                <hr>
+                <h1>Practica 2</h1>
+                <p>En la organización crear una aplicación que muestre una tabla de 3X3 con los números del 1 al 9. <br>
+
+                Utilizar las etiquetas table,tr y td. La tabla se debe generar desde javascript utilizando ciclos. Puede agregar un botón que ejecute la generación de la tabla. <br></p>
+                <article>
+                    <h2>Links de la practica</h2>
+                    <ul>
+                        <li><a href="https://fdw52ad2025.github.io/website52/RickyCorCam/ev2/practica2/index.html">Link aplicacion tabla</a></li>
+                        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=RickyCorCam&since=2025-10-13&until=2025-10-14">Link commits</a></li>
                     </ul>
                 </article>
             </section>
