--- a/Hugo-0699/ev2_practica-2/index.html
+++ b/Hugo-0699/ev2_practica-2/index.html
@@ -10,9 +10,8 @@
     <main>
         <h1>Ciclos con JavaScript</h1>
         <section>
-            <center><button id="boton">Ejecutar</button></center>
-        
-            <h2>Tabla</h2>
+            <h2>Tabla Sudoku</h2>
+            <center><button id="boton">Presiona aquí</button></center>
             <table id="tabla">
                 <tr>
                     <td></td>
