--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -147,8 +147,8 @@
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
                     <ul id="boton">
-                        <li><a target="_blank" href="">La página NO esta lista</a></li>
-                        <li><a target="_blank" href="">Los commits NO se han agregado </a></li>
+                        <li><a target="_blank" href="https://fdw52ad2025.github.io/website52/Hugo-0699/ev2_practica-2/index.html">PÁGINA USANDO CICLOS (for)</a></li>
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-10-13&until=2025-10-14&author=Hugo-0699">TODOS LOS COMMITS </a></li>
                     </ul>
                 </nav>
                 <hr>
