Agg práctica 2.2 al portafolio.

--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -155,6 +155,20 @@
                 </footer>
             </section>
         </article>
+
+            <hr>
+
+            <h2>Práctica 2.2</h2>
+        <article>
+            <section>
+                <header>
+                    <h3>En esta práctica se realizó una simulación a un juego. Mediante JS debía lograr insertar a una tabla vacía en HTML, utilizando ciclos en JS.</h3>
+                </header>
+                <footer>
+                    <p>Práctica realizada entre 13 y 14 de Octubre del año 2025</p>
+                </footer>
+            </section>
+        </article>
     </main>
     <aside></aside>
     <footer>
