--- a/gfuelinme/index.html
+++ b/gfuelinme/index.html
@@ -15,9 +15,7 @@
     </header>
     <main>
         <article>
-            <header>
             <h2 id="header-evidencias">Evidencia 1</h2>
-            </header>
             <section>
                 <h3>Practica 1</h3>
                 <p>Realizada el 15 de Agosto del 2025.</p>
@@ -99,15 +97,13 @@
                     </li>
                 </ul>
             </section>
-        </article>
-        <div>
             <h2 id="header-evidencias">Evidencia 2</h2>
             <section>
                 <h3>Practica 1</h3>
                 <p>Realizada el 6 de Octubre del 2025.</p>
-                <p>En esta practica hicimos una calculadora de areas dinamica usando JavaScript. <br> La practica fue terminada en el salon de clases.</p>
+                <p>En esta practica hicimos una calculadora de areas dinamica usando JavaScript. <br> La practica fue terminada en el laboratorio.</p>
             </section>
-        </div>
+        </article>
     </main>
     <aside></aside>
     <footer></footer>
