--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -92,6 +92,18 @@
                     <p>Elaboración de calculadora de áreas de figuras utilizando HTML, CSS y JS. Práctica realizada y calificada durante clase el día lunes 6 de octubre.</p>
                 </section>
             </div>
+
+            <div class="seccion-flex">
+                <section>
+                    <h2>PRÁCTICA 2</h2>
+                    <p>Práctica de creación de una aplicación que muestre una tabla de 3X3 con los números del 1 al 9. Práctica realizada del 13 al 14 de octubre. </p>
+                    <ul>
+                        <li><a href=""> Link aplicación tabla</a></li> 
+                        <li><a href="">Link de los commits</a></li>
+                    </ul>
+                </section>
+            </div>
+
         </div>
     </main>
     
