--- a/victoriabalderas/index.html
+++ b/victoriabalderas/index.html
@@ -98,8 +98,8 @@
                     <h2>PRÁCTICA 2</h2>
                     <p>Práctica de creación de una aplicación que muestre una tabla de 3X3 con los números del 1 al 9. Práctica realizada del 13 al 14 de octubre. </p>
                     <ul>
-                        <li><a href=""> Link aplicación tabla</a></li> 
-                        <li><a href="">Link de los commits</a></li>
+                        <li><a href="https://fdw52ad2025.github.io/website52/victoriabalderas/Ev2/practica2/index.html"> Link aplicación tabla</a></li> 
+                        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=victoriabalderas&since=2025-10-13&until=2025-10-14">Link de los commits</a></li>
                     </ul>
                 </section>
             </div>
