actu link pract2 ev2

--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -78,7 +78,12 @@
         </section>
         <section>
                 <h3>Práctica 2</h3>
-                <p>En la práctica 2 de la evidencia 2 hicimos un ejemplo de sudoku, utilizando los ciclos desde javascript</p>
+                <p>En la práctica 2 de la evidencia 2 hicimos un ejemplo de sudoku, utilizando los ciclos y creando la tabla desde javascript</p>
+                <h3>Links - Fechas del 13 al 14 de octubre</h3>
+        <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/pract2ev2/sudoku.html"> Página tabla de sudoku
+</a></li>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-10-13&until=2025-10-14"> Commits
+</a></li>
         </section>
     </main>
     <aside></aside>
