--- a/FernandaGomezG/practica1ev2/index.html
+++ b/FernandaGomezG/practica1ev2/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Pratica 1 Areas</title>
+    <title>Practica 1 Evidencia2</title>
 </head>
 <body>
-    <h1>Practica 1 Evidencia2</h1>
+    <h1>Pratica 1 Areas</h1>
 
     <form action="">
         <label for="valor1">Base o lado:</label>
