--- a/FernandaGomezG/practica2ev2/index.html
+++ b/FernandaGomezG/practica2ev2/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica 2 Sudoku</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Practica 2 Evidencia 2</title>
 </head>
 <body>
     <h1>Práctica 2 SUDOKU</h1>
     
     <button id="boton">GENERAR SUDOKU</button>
-    <table id="tabla"></table>
-    <script></script>
+    <table id="tabla" class="tabla"></table>
+    <script src="main.js"></script>
 </body>
 </html>
