--- a/ernesgarcia06/Evidencia2/practica2.html
+++ b/ernesgarcia06/Evidencia2/practica2.html
@@ -6,7 +6,8 @@
     <title>Sudoku</title>
 </head>
 <body>
-    <h1>Sudoku</h1>
+    <h1>Práctica 2</h1>
+    <h2>Sudoku</h2>
     <button id="boton">Ejecutar</button>
     <table id="tabla"></table>
     <script src="practica2.js"></script>
