--- a/ernesgarcia06/index.html
+++ b/ernesgarcia06/index.html
@@ -78,6 +78,9 @@
         <h2>Evidencia 2.</h2>
         <h3>Práctica 1.</h3>
         <p>Práctica Realizada en Clase.</p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-10-06&until=2025-10-07" target="_blank">Link Commits</a></li>
+        </ul>
         <hr>
         <h3>Práctica 2</h3>
         <p>En esta práctica se realizó un mini sudoku que tendra la siguiente estructura: </p>
@@ -90,6 +93,7 @@
         <nav>
             <ul>
                 <li><a href="Evidencia2/practica2.html">Práctica 2</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=ernesgarcia06&since=2025-10-13&until=2025-10-14" target="_blank">Link Commits</a></li>
             </ul>
         </nav>
     </main>
