links practica2ev2

--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Evidencias</title>
 </head>
 <body>
@@ -74,6 +75,16 @@
                 <ol>
                     <li><a href="practica1ev2/index.html" target="_blank">Calculadora usando html y JavaScript</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-10-06&until=2025-10-07" target="_blank">Commits realizados del 6 al 7 de octubre</a></li>                    
+                    </ol>
+                </nav>
+
+            <h2 style="color: rgb(70, 70, 182);"> Evidencia 2</h2>
+            <p>Práctica 2</p>
+            <p>En está práctica se realizó un sudoku a través de una tabla con elementos en javascript y diseño.</p>
+            <nav>
+                <ol>
+                    <li><a href="practica2ev2/index.html" target="_blank">Sudoku usando html y JavaScript</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-10-13&until=2025-10-14" target="_blank">Commits realizados del 13 al 14 de octubre</a></li>                    
                     </ol>
                 </nav>
     </main>
