--- a/FernandaGomezG/index.html
+++ b/FernandaGomezG/index.html
@@ -12,7 +12,7 @@
         <h1>Evidencia 1</h1>
     </header>
     <main>
-        <h2 style="color: rgb(70, 70, 182);"> Publicación de la práctica 1</h2>
+        <h2 > Publicación de la práctica 1</h2>
         <li><a href="https://fdw52ad2025.github.io/website52/">Repositorio Grupo 52</a></li>
 
         <p>En la práctica 1 realizamos una página web, en esta página compartí algunos de mis hobbies y actividades
@@ -26,7 +26,7 @@
             </ol>
         </nav>
 
-        <h3 style="color: rgb(70, 70, 182);"> Publicación de la práctica 2</h3>
+        <h2> Publicación de la práctica 2</h2>
         <p>En la práctica 2 agregamos nuestra carpeta personal en el repositorio grupal, en la que modificamos nuestras evidencias.
             Estos son los links de la práctica 2 en las fechas del 20 al 22 de agosto.</p>
         <nav>
@@ -36,20 +36,20 @@
             </ol>
         </nav>
     <nav>
-        <h3 style="color: rgb(70, 70, 182);">Publicación de la práctica 3</h3>
+        <h2>Publicación de la práctica 3</h2>
             <ol>
                 <li><a href="practica3/index.html">Página sobre mis hobbies (ver2)</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-27">Commits clase 27 de agosto 2025</a></li>
                 <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-08-27&until=2025-08-29">Commits realizados del 27 al 29 de agosto</a></li>
             </ol>
         </nav>
-        <h3 style="color: rgb(70, 70, 182);"> Publicación de la práctica 4 </h3>
+        <h2> Publicación de la práctica 4 </h2>
         <p>En esta práctica se modificó el diseño de link del usuario personal de GitHub.</p>
         <p>Estos son los links de la práctica realizada del 01 al 03 de septiembre</p>
         <ol>
             <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-01&until=2025-09-03" target="_blank">Commits realizados del 01 al 03 de septiembre</a></li>
         </ol>
-        <h3 style="color: rgb(70, 70, 182);">Publicación de la práctica 5</h3>
+        <h2>Publicación de la práctica 5</h2>
         <p>En esta práctica se aplicaron selectores de diseño a nuestra págia sobre pasatiempos.</p>
         <p>Estos son los links de la práctica realizada del 8 al 10 de septiembre</p>
             <nav>
@@ -58,7 +58,7 @@
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=FernandaNohemiGomezGarcia&since=2025-09-08&until=2025-09-10" target="_blank">Commits realizados del 8 al 10 de septiembre</a></li>
                 </ol>
             </nav>
-        <h3 style="color: rgb(70, 70, 182);">Publicación de la práctica 6</h3>
+        <h2>Publicación de la práctica 6</h2>
         <p>En está práctica se aplicaron diseños de CSS al html, haciendo énfasis a las herramientas que brinda Flexbox</p>
         <p>Estos son los links de la práctica realizada del 10 al 12 de septiembre</p>
         <nav>
@@ -68,7 +68,7 @@
                 </ol>
             </nav>
 
-            <h1 style="color: rgb(70, 70, 182);"> Evidencia 2</h1>
+            <h1> Evidencia 2</h1>
             <p>Práctica 1</p>
             <p>En está práctica creamos una calculadora con JavaScript y le aplicamos diseño</p>
             <nav>
@@ -78,7 +78,7 @@
                     </ol>
                 </nav>
 
-            <h2 style="color: rgb(70, 70, 182);"> Evidencia 2</h2>
+            <h2> Evidencia 2</h2>
             <p>Práctica 2</p>
             <p>En está práctica se realizó un sudoku a través de una tabla con elementos en javascript y diseño.</p>
             <nav>
