--- a/BernaGaspar/Evidencia2/Practica2/index_sodoku.html
+++ b/BernaGaspar/Evidencia2/Practica2/index_sodoku.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="estilos_sodoku.css">
 </head>
 <body>
-    <header><h1>Tabla sodoku desde JavaScript</h1></header>
+    <header>
+        <p>Tabla sodoku desde JavaScript</p>
+    </header>
+
+    <p>Al dar clic en el boton, se mostrara una tabla Sodoku</p>
+
+    <button id="Btn">Mostrar</button>
+
+    <div id="Div"></div>
+
+    <footer>
+        <p>Aplicacion hecha por: Bernardo Gaspar Ibarra (2070265)</p>
+        <p>UNIVERSIDAD AUTONOMA DE NUEVO LEON</p>
+        <p>Facultadad de Contaduria Publica y Administracion</p>
+    </footer>
     
     <script src="main_sodoku.js"></script>
 </body>
