--- a/BernaGaspar/index.html
+++ b/BernaGaspar/index.html
@@ -110,7 +110,7 @@
         <p>Links que debe guardar para la práctica:</p>
         <ul>
             <li><section id="s1">Link Aplicacion Areas: <a href="#" target="_blank">Link1</a></section></li>
-            <li><section id="s2">Link Commits: <a href="#" target="_blank">Link2</a></section></li>
+            <li><section id="s2">Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-10-06&until=2025-10-07" target="_blank">Link2</a></section></li>
         </ul>
     </article>
 
@@ -122,7 +122,7 @@
         <p>Links que debe guardar para la práctica:</p>
         <ul>
             <li><section id="s1">Link Aplicacion Tabla: <a href="#" target="_blank">Link1</a></section></li>
-            <li><section id="s2">Link Commits: <a href="#" target="_blank">Link2</a></section></li>
+            <li><section id="s2">Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-10-13&until=2025-10-14" target="_blank">Link2</a></section></li>
         </ul>
     </article>
 
