pagina principal actualizada

--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -108,6 +108,16 @@
         <h2>Fechas</h2>
         <p>Del 6 al 7 de octubre del 2025</p>
 
+        <h1>Practica 2</h1>
+        <p>
+            En esta segunda practica se realizo un cuadro el cual contiene los numeros del 1 al 9.
+        </p>
+        <ul>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/NerickRamirez?since=2025-10-13&until=2025-10-14">Commits</a></li>
+        </ul>
+        <h2>Fechas</h2>
+        <p>Del 13 al 14 de octubre del 2025</p>
+
         <footer>
             Nerick Ramirez
         </footer>
