--- a/1jecc/index.html
+++ b/1jecc/index.html
@@ -53,6 +53,12 @@
         <article class="box">
             <h2 class="h2">Práctica 1</h2>
             <p>Calculadora de figuras geometricas se realizo en clase</p>
+
+            <div class="box">
+                <h2 class="h2">Práctica 2</h2>
+                <a class="a" href="https://fdw52ad2025.github.io/website52/1jecc/practicas_parte_2/index.html">Link de la página clon.</a>
+                <a class="a" href="https://github.com/FDW52AD2025/website52/commits/main/?author=1jecc&since=2025-10-13&until=2025-10-14">Enlace de commits</a>
+            </div>
         </article>
 
     </article>
