--- a/1jecc/index.html
+++ b/1jecc/index.html
@@ -51,8 +51,10 @@
         <article class="box1">
         <h1>Evidencia 2</h1>
         <article class="box">
-            <h2 class="h2">Práctica 1</h2>
-            <p>Calculadora de figuras geometricas se realizo en clase</p>
+            <div class="box">
+                <h2 class="h2">Práctica 1</h2>
+                <p>Calculadora de figuras geometricas se realizo en clase</p>
+            </div>
 
             <div class="box">
                 <h2 class="h2">Práctica 2</h2>
