--- a/SunnyWiltshire/Ev2P2/index.html
+++ b/SunnyWiltshire/Ev2P2/index.html
@@ -10,6 +10,6 @@
     <h3>Generación de la tabla sodoku:</h3>
     <button id="boton">Ejecutar</button>
     <table id="tabla"></table>
-    <script src="sodoku.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
