--- a/BernaGaspar/index.html
+++ b/BernaGaspar/index.html
@@ -109,7 +109,7 @@
         <p>Fecha commits: 6 al 7 de Octubre.</p>
         <p>Links que debe guardar para la práctica:</p>
         <ul>
-            <li><section id="s1">Link Aplicacion Areas: <a href="#" target="_blank">Link1</a></section></li>
+            <li><section id="s1">Link Aplicacion Areas: <a href="https://fdw52ad2025.github.io/website52/BernaGaspar/Evidencia2/Practica1/index_areas.html" target="_blank">Link1</a></section></li>
             <li><section id="s2">Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-10-06&until=2025-10-07" target="_blank">Link2</a></section></li>
         </ul>
     </article>
@@ -121,7 +121,7 @@
         <p>Fecha commits: 13 al 14 de Octubre.</p>
         <p>Links que debe guardar para la práctica:</p>
         <ul>
-            <li><section id="s1">Link Aplicacion Tabla: <a href="#" target="_blank">Link1</a></section></li>
+            <li><section id="s1">Link Aplicacion Tabla: <a href="https://fdw52ad2025.github.io/website52/BernaGaspar/Evidencia2/Practica2/index_sodoku.html" target="_blank">Link1</a></section></li>
             <li><section id="s2">Link Commits: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=BernaGaspar&since=2025-10-13&until=2025-10-14" target="_blank">Link2</a></section></li>
         </ul>
     </article>
