Commits de la práctica 1 agregados en la página principal

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -135,6 +135,12 @@
                 </header>
                 <p>Se realizó en clase.</p>
                 <p><b>Fecha de los commits:</b> 06/10/2025 - 07/10/2025</p>
+                <nav>
+                    <h4>Enlaces de GitHub:</h4>
+                    <ul id="boton">
+                        <li><a target="_blank" href="https://github.com/FDW52AD2025/website52/commits/main/?since=2025-10-06&until=2025-10-07&author=Hugo-0699">TODOS LOS COMMITS </a></li>
+                    </ul>
+                </nav>
                 <hr>
                 <header id="no-practica">
                     <h2>Práctica 2</h2>
