add links practica

--- a/Bejesusrey/index.html
+++ b/Bejesusrey/index.html
@@ -125,8 +125,8 @@
             <article>
                 <p>Creamos una "App" donde mostramos el diseño de un Sodoku.</p>
                 <ul>
-                    <li><a href="">Link Aplicación Tabla</a></li>
-                    <li><a href="">Link Commits</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Bejesusrey/Practica2Ev2/index.html">Link Aplicación Tabla</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bejesusrey?author=Bejesusrey&since=2025-10-13&until=2025-10-14">Link Commits</a></li>
                 </ul>
                 <p><b>Fecha de Commits: 13 al 14 de Octubre</b></p>
             </article>
