--- a/aaronrdzr/index.html
+++ b/aaronrdzr/index.html
@@ -41,6 +41,7 @@
       <h2>Evidencia 2</h2>
       <h2>Practica 1</h2>
       <p>Ya la realice en clase.</p>
+      <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-10-06&until=2025-10-07">Links Commits </a></li>
     </main>
     <aside></aside>
     <hr style="background-color: black;">
