--- a/aaronrdzr/index.html
+++ b/aaronrdzr/index.html
@@ -42,6 +42,9 @@
       <h2>Practica 1</h2>
       <p>Ya la realice en clase.</p>
       <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-10-06&until=2025-10-07">Links Commits </a></li>
+      <h2>Practica 2</h2>
+      <li><a href="https://fdw52ad2025.github.io/website52/aaronrdzr/Ev2Practica2/index.html">Pagina Sudoku</a></li>
+      <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=aaronrdzr&since=2025-10-13&until=2025-10-15">Link Commits</a></li>
     </main>
     <aside></aside>
     <hr style="background-color: black;">
