--- a/jesuscruz125/index.html
+++ b/jesuscruz125/index.html
@@ -158,12 +158,19 @@
                 <header>
                     <h2>Práctica 1</h2>
                 </header>
-                <p>Se creo un formulario para calcular el area dependiendo nuestra elección sobre un triangulo, rectangulo o cuadrado.</p>
+                <p>Se creó una aplicación mediante un formulario que permite calcular el área según la figura que se elija: triángulo, rectángulo o cuadrado, utilizando las cajas de texto valor 1 y valor 2 como entradas para realizar los cálculos.</p>
+                <p>Diseño de la aplicación:</p>
+                <img width="250px" src="https://liigabriel.github.io/evidenciasGpo52_AD2025/img/appAreas.jpg" alt="Screenshot aplicación en un formulario">
+
+                <p><mark>La práctica fue realizada en clase y ha sido calificada.</mark></p>
 
                 <p>Enlaces requeridos:</p>
                 <ul>
-                    <li>Enlace commit en clase 06/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-06" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-06</a></li>
+                    <li>Enlace commit en clase 06/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-07" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-06&until=2025-10-07</a></li>
                 </ul>
+
+                <p>Fecha de commits: 6 al 7 de Octubre.</p>
+
 
             </article>
         </section>
@@ -176,33 +183,47 @@
                     <h2>Práctica 2</h2>
                 </header>
 
-                <p>Diseñar una página que contenga un boton y al dar click genere una tabla con la siguiente información:</p>
-                <pre>
-                    1 2 3
-                    4 5 6 
-                    7 8 9
-                </pre>
+                <p>Se creó una página con un botón que, al hacer clic, genera una tabla 3x3 con los números del 1 al 9, utilizando las etiquetas table, tr y td y ciclos en JavaScript.</p>
+
+                <p>Diseño de la aplicación:</p>
+                <img src="https://liigabriel.github.io/evidenciasGpo52_AD2025/img/tablasudoku.jpg" alt="Imagen de sodoku">
+                <p>Enlace a la práctica: <a href="JSP2/index.html">Práctica 2 JS</a></p>
 
                 <p>Enlaces requeridos:</p>
 
+
                 <ul>
-                    <li>Enlace práctica: <a href="JSP2/index.html">Práctica 2 JS</a></li>
+                    <li>Enlace aplicación tabla: <a href="https://fdw52ad2025.github.io/website52/jesuscruz125/JSP2/index.html">https://fdw52ad2025.github.io/website52/jesuscruz125/JSP2/index.html</a></li>
                     <li>Enlace commits 13/10/2025 al 14/10/2025: <a href="https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14" target="_blank">https://github.com/FDW52AD2025/website52/commits/main/?author=jesuscruz125&since=2025-10-13&until=2025-10-14</a></li>
                 </ul>
                 
+                <p>Fecha commits: 13 al 14 de Octubre.</p>
 
             </article>
         </section>
 
         <hr>
 
-        <section>
+        <section id="Ev2P3">
             <article>
-                <header></header>
+                <header>
+                    <h2>Práctica 3</h2>
+                </header>
+                <p>En esta práctica fue necesario la creación de un repositorio en GitHub para la aplicación solciitada.</p>
+                <p>Se diseño una interfaz con los datos de alguna API que se mencionó en clase.</p>
+
+                <p>Enlaces requeridos:</p>
+                <ul>
+                    <li>Enlace aplicación: <a href="www.github.com">Modificar</a></li>
+                    <li>Enlace commits: <a href="www.github.com">Modificar</a></li>
+                </ul>
+
+                <p>Fecha commits: 15 al 22 de Octubre.</p>
 
             </article>
         </section>
 
+        <hr>
 
     </main>
     <aside>
