Actualización del index principal

--- a/Hugo-0699/index.html
+++ b/Hugo-0699/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="practica-6/imgs/img-logo.jpg" type="image/png"> 
+    <link rel="icon" href="index-img/img-logo.jpg" type="image/png"> 
     <link rel="stylesheet" href="estilos.css">
     <title>Mis Evidencias-Hugo</title>
 </head>
@@ -11,7 +11,7 @@
     <header class="first-header">
         <h1>Fundamentos del Desarrollo Web: Evidencias de aprendizaje</h1>
     </header>
-    <main >
+    <main>
         <article class="article-body">
 
             <section id="no-ev">
@@ -108,7 +108,7 @@
                 <header id="no-practica">
                     <h2>Práctica 6</h2>
                 </header>
-                <p>En esta práctica crearemos un documento HTML (utilizando flexbox) en donde se diseñará lo que se muestra en la siguiente imagen:</p>
+                <p>En esta práctica crearemos una página web (utilizando flexbox) en donde se diseñará lo que se muestra en la siguiente imagen:</p>
                 <figure>
                     <center><img src="practica-6/imgs/practica6_img.png" alt=""></center>
                 </figure>
@@ -133,7 +133,12 @@
                 <header id="no-practica">
                     <h2>Práctica 1</h2>
                 </header>
-                <p>Se realizó en clase.</p>
+                <p>En esta práctica se deberá diseñar una página web (utilizando <strong>JavaScript</strong>) que contenga una calculadora que obtenga el area de tres figuras geométricas: triángulo, cuadrado y rectángulo.</p>
+                <p>Diseño de la calculadora:</p>
+                <figure>
+                    <center><img src="index-img/ev2-practica1.png" alt=""></center>
+                </figure>
+                <p><mark><u>Se realizó en clase</u></mark></p>
                 <p><b>Fecha de los commits:</b> 06/10/2025 - 07/10/2025</p>
                 <nav>
                     <h4>Enlaces de GitHub:</h4>
@@ -145,9 +150,9 @@
                 <header id="no-practica">
                     <h2>Práctica 2</h2>
                 </header>
-                <p>En esta práctica debemos diseñar una página web (utilizando JavaScript) que contenga un botón que, al momento de hacer clic, genere una tabla con la siguiente información:</p>
+                <p>En esta práctica se deberá diseñar una página web (utilizando <strong>JavaScript</strong>) que contenga un botón el cual, al hacer click, genere una tabla con la siguiente información:</p>
                 <figure>
-                    <center><img src="practica-6/imgs/tabla.png" alt=""></center>
+                    <center><img src="index-img/tabla.png" alt=""></center>
                 </figure>
                 <p><b>Fecha de los commits:</b> 13/10/2025 - 14/10/2025</p>
                 <nav>
